--- a/.github/workflows/zap-api-scan.yml
+++ b/.github/workflows/zap-api-scan.yml
@@ -15,22 +15,24 @@ jobs:
         run: |
           echo "TOKEN=$(cat auth.txt | tr -d '\n')" >> $GITHUB_ENV
 
+      - name: Start ZAP daemon
+        run: |
+          docker run -d --name zap \
+            --user 0:0 \
+            -p 8080:8080 \
+            -v "$PWD:/zap/wrk" \
+            ghcr.io/zaproxy/zaproxy:stable \
+            zap.sh -daemon -host 0.0.0.0 -port 8080 \
+            -config api.disablekey=true
+
       - name: Run ZAP API Scan
         run: |
-          docker run --name zap --rm \
-            --user 0:0 \
-            -v "$PWD:/zap/wrk" \
-            -t ghcr.io/zaproxy/zaproxy:stable \
-            zap-api-scan.py \
+          docker exec zap zap-api-scan.py \
             -t /zap/wrk/properties_zap.json \
             -f openapi \
             -r full-api-scan.html \
             -x full-api-scan.xml \
             -z "
-              -config api.disablekey=true
-              -config api.addrs.addr.name=.*
-              -config api.addrs.addr.regex=true
-
               -config replacer.full_list(0).description=auth
               -config replacer.full_list(0).enabled=true
               -config replacer.full_list(0).matchtype=REQ_HEADER
@@ -38,13 +40,9 @@ jobs:
               -config replacer.full_list(0).replacement=${TOKEN}
             " || true
 
-      - name: Export HAR (actual request & response)
+      - name: Export HAR (ACTUAL request & response)
         run: |
-          docker run --rm \
-            -v "$PWD:/zap/wrk" \
-            ghcr.io/zaproxy/zaproxy:stable \
-            zap-cli --zap-url http://localhost -p 8080 \
-            export har /zap/wrk/zap-traffic.har || true
+          docker exec zap zap-cli export har /zap/wrk/zap-traffic.har
 
       - name: Upload ZAP report
         uses: actions/upload-artifact@v4
