--- a/.github/workflows/zap-api-scan.yml
+++ b/.github/workflows/zap-api-scan.yml
@@ -15,23 +15,18 @@ jobs:
         run: |
           echo "TOKEN=$(cat auth.txt | tr -d '\n')" >> $GITHUB_ENV
 
-      - name: Start ZAP daemon
-        run: |
-          docker run -d --name zap \
-            --user 0:0 \
-            -p 8080:8080 \
-            -v "$PWD:/zap/wrk" \
-            ghcr.io/zaproxy/zaproxy:stable \
-            zap.sh -daemon -host 0.0.0.0 -port 8080 \
-            -config api.disablekey=true
-
       - name: Run ZAP API Scan
         run: |
-          docker exec zap zap-api-scan.py \
+          docker run --rm \
+            --user 0:0 \
+            -v "$PWD:/zap/wrk" \
+            -t ghcr.io/zaproxy/zaproxy:stable \
+            zap-api-scan.py \
             -t /zap/wrk/properties_zap.json \
             -f openapi \
             -r full-api-scan.html \
             -x full-api-scan.xml \
+            -s full-api-scan.session \
             -z "
               -config replacer.full_list(0).description=auth
               -config replacer.full_list(0).enabled=true
@@ -40,12 +35,6 @@ jobs:
               -config replacer.full_list(0).replacement=${TOKEN}
             " || true
 
-      - name: Export HAR (ACTUAL request & response)
-        run: |
-          docker exec zap curl \
-            "http://localhost:8080/OTHER/core/other/har/?formMethod=GET" \
-            -o /zap/wrk/zap-traffic.har
-
       - name: Upload ZAP report
         uses: actions/upload-artifact@v4
         with:
@@ -53,4 +42,4 @@ jobs:
           path: |
             full-api-scan.html
             full-api-scan.xml
-            zap-traffic.har
+            full-api-scan.session
