--- a/.github/workflows/zap-api-scan.yml
+++ b/.github/workflows/zap-api-scan.yml
@@ -15,13 +15,18 @@ jobs:
         run: |
           echo "TOKEN=$(cat auth.txt | tr -d '\n')" >> $GITHUB_ENV
 
+      - name: Start ZAP Daemon
+        run: |
+          docker run -d --name zap \
+            --user 0:0 \
+            -p 8090:8090 \
+            -v "$PWD:/zap/wrk" \
+            ghcr.io/zaproxy/zaproxy:stable \
+            zap.sh -daemon -host 0.0.0.0 -port 8090
+
       - name: Run ZAP API Scan
         run: |
-          docker run --rm \
-            --user 0:0 \
-            -v "$PWD:/zap/wrk" \
-            -t ghcr.io/zaproxy/zaproxy:stable \
-            zap-api-scan.py \
+          docker exec zap zap-api-scan.py \
             -t /zap/wrk/properties_zap.json \
             -f openapi \
             -r full-api-scan.html \
@@ -34,6 +39,9 @@ jobs:
               -config replacer.full_list(0).matchstr=Authorization
               -config replacer.full_list(0).replacement=${TOKEN}
             " || true
+
+      - name: Stop ZAP
+        run: docker exec zap zap.sh -cmd -shutdown
 
       - name: Upload ZAP report
         uses: actions/upload-artifact@v4
